package structuredBank;
syntax = "proto3";

message create_account {
    int32 customer_id = 1;
    string customer_name = 2;
    float savings_balance = 3;
    float checking_balance = 4;
}

message deposit_money {
    int32 customer_id = 1;
    float amount = 2;
}

message withdraw_money {
    int32 customer_id = 1;
    float amount = 2;
}

message transfer_money {
    int32 source_customer_id = 1;
    int32 dest_customer_id = 2;
    float amount = 3;
}

message issue_cheque {
    int32 source_customer_id = 1;
    int32 dest_customer_id = 2;
    float amount = 3;
}

message clear_checking_balance {
    int32 source_customer_id = 1;
    float amount = 2;
}
    
message get_balances {
    int32 customer_id = 1;
}